--- a/main.tex
+++ b/main.tex
@@ -415,8 +415,8 @@
 \begin{frame}
 	\frametitle{Experiments}
 	\begin{itemize}
-		\item Gibbs parameter recovery
-		\item Gibbs scaling in $n$
+		\item Gibbs: parameter recovery
+		\item Gibbs: scalability
 		\item Point estimation with massive graphs
 	\end{itemize}
 \end{frame}
@@ -455,7 +455,7 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Scalability of Gibbs sampler}
+	\frametitle{Scalability}
 	\begin{itemize}
 		\item Simulate with fixed $\alpha$ and $\Geom(\beta)$ arrivals
 	\end{itemize}
@@ -481,6 +481,7 @@
 		\end{center}
 	\end{table}
 	\begin{itemize}
+		\item Runtime linear in \#edges
 		\item Most expensive Gibbs update is for $\bfT$
 	\end{itemize}
 \end{frame}
